<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.java2nb</groupId>
    <artifactId>novel</artifactId>
    <version>5.3.3</version>
    <modules>
        <module>novel-common</module>
        <module>novel-front</module>
        <module>novel-crawl</module>
        <module>novel-admin</module>
    </modules>
    <packaging>pom</packaging>

    <name>novel</name>
    <description>Dự án cha Novel Plus</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
        <relativePath/>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <maven.test.skip>false</maven.test.skip>
        <mysql.version>8.0.29</mysql.version>
        <mybatis.version>3.0.4</mybatis.version>
        <mybatis-generator.version>1.4.0</mybatis-generator.version>
        <mybatis-dynamic-sql.version>1.5.0</mybatis-dynamic-sql.version>
        <pagehelper.version>1.4.6</pagehelper.version>
        <commons-lang3.version>3.4</commons-lang3.version>
        <jjwt.version>0.9.1</jjwt.version>
        <jest.version>6.3.1</jest.version>
        <redis.version>1.4.1.RELEASE</redis.version>
        <redisson.version>3.12.5</redisson.version>
        <shardingsphere-jdbc.version>5.5.1</shardingsphere-jdbc.version>
        <aliyun-sdk-oss.version>3.16.3</aliyun-sdk-oss.version>
        <commons-fileupload.version>1.5</commons-fileupload.version>
        <xxyopen.version>1.0.0</xxyopen.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.java2nb</groupId>
                <artifactId>novel-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.java2nb</groupId>
                <artifactId>novel-front</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>1.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>ali</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>ali-plugin</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <profiles>
        <profile>
            <id>central-repo</id>
            <repositories>
                <repository>
                    <id>ali</id>
                    <url>https://repo.maven.apache.org/maven2</url>
                    <releases>
                        <enabled>true</enabled>
                    </releases>
                    <snapshots>
                        <enabled>false</enabled>
                    </snapshots>
                </repository>
            </repositories>
            <pluginRepositories>
                <pluginRepository>
                    <id>ali-plugin</id>
                    <url>https://repo.maven.apache.org/maven2</url>
                    <releases>
                        <enabled>true</enabled>
                    </releases>
                    <snapshots>
                        <enabled>false</enabled>
                    </snapshots>
                </pluginRepository>
            </pluginRepositories>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
